# RxVision

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  security.yml
data/: dataset_info.json
docs/: DATA_ACQUISITION.md  NIH_RXIMAGE_DATASET_GUIDE.md
notebooks/: 01_data_exploration_preprocessing.ipynb  02_model_training_evaluation.ipynb  03_inference_deployment_demo.ipynb
scripts/: download_data.py  download_data_modern.py  test_connection.py  test_data_download.py
scripts/data/: dataset_info.json
src/mlops/: __init__.py
tests/: conftest.py  test_data_engineering.py  test_inference.py  test_training.py
